--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Test your knowledge!" />
+    <title>Damage Control</title>
+    <meta name="description" content="Test your knowledge of DC!" />
   </head>
   <body>
     <div id="root"></div>
